--- a/src/main/java/com/alec/brieftalk/LoginWindow.form
+++ b/src/main/java/com/alec/brieftalk/LoginWindow.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alec.brieftalk.LoginWindow">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="100" left="20" bottom="20" right="20"/>
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="140" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="293" height="322"/>
+      <xy x="20" y="20" width="293" height="362"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="8de51" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="8de51" class="javax.swing.JComboBox" binding="serverChoice">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -36,7 +36,7 @@
               <text resource-bundle="lang/BriefTalk" key="loginwindow.server"/>
             </properties>
           </component>
-          <component id="8aba6" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="8aba6" class="javax.swing.JTextField" binding="serverIP">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -68,7 +68,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="80072" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="80072" class="javax.swing.JTextField" binding="username">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -76,7 +76,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="116a8" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="116a8" class="javax.swing.JTextField" binding="password">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
