--- a/src/main/java/com/alec/brieftalk/LoginWindow.form
+++ b/src/main/java/com/alec/brieftalk/LoginWindow.form
@@ -112,7 +112,9 @@
       </component>
       <component id="d5a99" class="javax.swing.JLabel" binding="warning">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="20"/>
+          </grid>
         </constraints>
         <properties>
           <foreground color="-65536"/>
