--- a/src/main/java/com/alec/ttalk/LoginWindow.form
+++ b/src/main/java/com/alec/ttalk/LoginWindow.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alec.brieftalk.LoginWindow">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alec.ttalk.LoginWindow">
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="140" left="20" bottom="40" right="20"/>
     <constraints>
@@ -33,7 +33,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text resource-bundle="lang/BriefTalk" key="loginwindow.server"/>
+              <text resource-bundle="lang/tTalk" key="loginwindow.server"/>
             </properties>
           </component>
           <component id="8aba6" class="javax.swing.JTextField" binding="serverIP">
@@ -81,7 +81,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text resource-bundle="lang/BriefTalk" key="loginwindow.username"/>
+              <text resource-bundle="lang/tTalk" key="loginwindow.username"/>
             </properties>
           </component>
           <component id="15c81" class="javax.swing.JLabel">
@@ -89,7 +89,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text resource-bundle="lang/BriefTalk" key="loginwindow.password"/>
+              <text resource-bundle="lang/tTalk" key="loginwindow.password"/>
             </properties>
           </component>
           <component id="8fc1f" class="javax.swing.JPasswordField" binding="password">
@@ -107,7 +107,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="lang/BriefTalk" key="loginwindow.login"/>
+          <text resource-bundle="lang/tTalk" key="loginwindow.login"/>
         </properties>
       </component>
       <component id="d5a99" class="javax.swing.JLabel" binding="warning">
