--- a/src/main/java/com/alec/ttalk/LoginWindow.form
+++ b/src/main/java/com/alec/ttalk/LoginWindow.form
@@ -54,7 +54,7 @@
           <vspacer id="7440a">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="20"/>
+                <minimum-size width="-1" height="30"/>
               </grid>
             </constraints>
           </vspacer>
@@ -151,7 +151,7 @@
           <text value=""/>
         </properties>
       </component>
-      <grid id="4637e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="4637e" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -168,6 +168,13 @@
               <text value=""/>
             </properties>
           </component>
+          <vspacer id="757f2">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="5"/>
+              </grid>
+            </constraints>
+          </vspacer>
         </children>
       </grid>
     </children>
