--- a/src/main/java/com/alec/ttalk/login/LoginWindow.form
+++ b/src/main/java/com/alec/ttalk/login/LoginWindow.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alec.ttalk.LoginWindow">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alec.ttalk.login.LoginWindow">
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="40" right="20"/>
     <constraints>
@@ -37,7 +37,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text resource-bundle="lang/tTalk" key="loginwindow.server"/>
+              <text resource-bundle="lang/tTalk" key="LoginWindow.server"/>
             </properties>
           </component>
           <component id="8aba6" class="javax.swing.JTextField" binding="serverIP">
@@ -97,7 +97,7 @@
               </grid>
             </constraints>
             <properties>
-              <text resource-bundle="lang/tTalk" key="loginwindow.username"/>
+              <text resource-bundle="lang/tTalk" key="LoginWindow.username"/>
             </properties>
           </component>
           <component id="15c81" class="javax.swing.JLabel">
@@ -107,7 +107,7 @@
               </grid>
             </constraints>
             <properties>
-              <text resource-bundle="lang/tTalk" key="loginwindow.password"/>
+              <text resource-bundle="lang/tTalk" key="LoginWindow.password"/>
             </properties>
           </component>
           <component id="8fc1f" class="javax.swing.JPasswordField" binding="password">
@@ -131,7 +131,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text resource-bundle="lang/tTalk" key="loginwindow.rememberpassword"/>
+                  <text resource-bundle="lang/tTalk" key="LoginWindow.rememberPassword"/>
                 </properties>
               </component>
               <component id="9fb00" class="javax.swing.JCheckBox" binding="autologinCheckBox" default-binding="true">
@@ -139,7 +139,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text resource-bundle="lang/tTalk" key="loginwindow.autologin"/>
+                  <text resource-bundle="lang/tTalk" key="LoginWindow.autologin"/>
                 </properties>
               </component>
             </children>
@@ -151,7 +151,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="lang/tTalk" key="loginwindow.login"/>
+          <text resource-bundle="lang/tTalk" key="LoginWindow.login"/>
         </properties>
       </component>
       <component id="d5a99" class="javax.swing.JLabel" binding="warning">
