--- a/src/main/java/com/alec/ttalk/chat/ChatWindow.form
+++ b/src/main/java/com/alec/ttalk/chat/ChatWindow.form
@@ -8,8 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="6d036" binding="titlePane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="6d036" binding="titlePane" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -43,22 +42,18 @@
           </component>
         </children>
       </grid>
-      <scrollpane id="caeda" binding="scrollPane">
+      <grid id="77cc2" binding="messageMainPane" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="250" height="300"/>
+            <preferred-size width="250" height="300"/>
+            <maximum-size width="250" height="300"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
-        <children>
-          <grid id="8e26f" binding="chatPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints/>
-            <properties/>
-            <border type="none"/>
-            <children/>
-          </grid>
-        </children>
-      </scrollpane>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
