Finish About Window Add source image file to git

--- a/src/main/java/com/alec/ttalk/login/LoginWindow.form
+++ b/src/main/java/com/alec/ttalk/login/LoginWindow.form
@@ -97,6 +97,7 @@
               </grid>
             </constraints>
             <properties>
+              <enabled value="true"/>
               <text resource-bundle="lang/tTalk" key="LoginWindow.username"/>
             </properties>
           </component>
