--- a/src/main/java/com/alec/ttalk/chat/ChatWindow.form
+++ b/src/main/java/com/alec/ttalk/chat/ChatWindow.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alec.ttalk.chat.ChatWindow">
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="0" left="0" bottom="10" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -32,14 +32,26 @@
               <text resource-bundle="lang/tTalk" key="ChatWindow.send"/>
             </properties>
           </component>
-          <component id="e17e6" class="javax.swing.JTextField" binding="message">
+          <scrollpane id="8ade">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="40"/>
               </grid>
             </constraints>
-            <properties/>
-          </component>
+            <properties>
+              <verticalScrollBarPolicy value="20"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="d6501" class="javax.swing.JTextArea" binding="message">
+                <constraints/>
+                <properties>
+                  <lineWrap value="true"/>
+                  <rows value="0"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="77cc2" binding="messageMainPane" layout-manager="BorderLayout" hgap="0" vgap="0">
